Closed Bug 37915 Opened 24 years ago Closed 24 years ago

plugin ref count leak in nsPluginHostImpl.cpp

Categories

(Core Graveyard :: Plug-ins, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sean, Assigned: serhunt)

Details

There should be a release in nsPluginHostImpl::InstantiateEmbededPlugin()  
before the return at 
http://lxr.mozilla.org/seamonkey/source/modules/plugin/nglsrc/nsPluginHostImpl.c
pp#1523 - without it, stopped plugins get leaked when you return to a page with 
a plugin that you've already been to.

    aOwner->GetInstance(instance);
    if(!aMimeType || PL_strcasecmp(aMimeType, "application/x-java-vm"))
        rv = NewEmbededPluginStream(aURL, nsnull, instance);
    NS_IF_RELEASE(instance);
    return NS_OK;
    }
Thanks for the catch. I think the same thing is happening in 
nsPluginHostImpl::InstantiateFullPagePlugin(). I'll check in the fix as soon as 
the tree is open.
Status: NEW → ASSIGNED
Done
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified changes in file nsPluginHostImpl.cpp.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.