Fixing release leaks for plugin instance, bug #37915